err/py3t.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py3t'...
Compiling './lib/python3.5/site-packages/py3t/__init__.py'...
***   File "./lib/python3.5/site-packages/py3t/__init__.py", line 15
    def play(self, (x, y)):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py3t/ai.py'...
***   File "./lib/python3.5/site-packages/py3t/ai.py", line 33
    def choose_by_priority(((x, y), prio)):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/py3t/game.py'...
***   File "./lib/python3.5/site-packages/py3t/game.py", line 14
    print "Turn #%d begins." % (t_num + 1,)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/py3t-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
